compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__functions__multiple_bad_statement_expression_fault_tolerance.snap
---
source: compiler-core/src_refactored/__core/type_/tests/functions.rs
assertion_line: 308
expression: "\npub fn main() {\n  1 + 2.0\n  3 + 4.0\n  let c = 1 + 2\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  1 + 2.0
  3 + 4.0
  let c = 1 + 2
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:3:7
  │
3 │   1 + 2.0
  │       ^^^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    Float

Hint: the +. operator can be used with Floats


error: Type mismatch
  ┌─ /src/one/two.gleam:4:7
  │
4 │   3 + 4.0
  │       ^^^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    Float

Hint: the +. operator can be used with Floats
